# rules_github

./: CHANGELOG.md  MODULE.bazel  README.md
docs/: BUILD.bazel  repositories.md  update.sh
github/: BUILD.bazel  extensions.bzl  repositories.bzl
github/private/: BUILD.bazel  platforms.bzl
