load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//github:__pkg__"])

bzl_library(
    name = "platforms_bzl",
    srcs = ["platforms.bzl"],
    # Public so that downstream bzl_library deps on
    # @rules_github//github:repositories_bzl can transitively resolve.
    visibility = ["//visibility:public"],
)
